--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,36 @@
 @import 'tailwindcss';
 @custom-variant dark (&:where(.dark, .dark *));
+
+::-webkit-scrollbar {
+	width: 6px;
+}
+::-webkit-scrollbar-track {
+	background: rgba(195, 179, 231, 0.8);
+	border-radius: 100px;
+}
+::-webkit-scrollbar-thumb {
+	background: linear-gradient(
+		180deg,
+		rgba(139, 92, 246, 0.8),
+		rgba(236, 72, 153, 0.8)
+	);
+	border-radius: 100px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: linear-gradient(
+		180deg,
+		rgba(139, 92, 246, 1),
+		rgba(236, 72, 153, 1)
+	);
+}
+.dark ::-webkit-scrollbar-thumb {
+	background: linear-gradient(
+		180deg,
+		rgba(236, 72, 153, 0.7),
+		rgba(139, 92, 246, 0.7)
+	);
+}
+.dark ::-webkit-scrollbar-track {
+	background: rgba(86, 80, 99, 0.8);
+	border-radius: 100px;
+}
